# openzoo-cpp

./: LICENSE  Makefile.am  Makefile.gba  Makefile.n3ds  Makefile.psp  configure.ac  meson.build  meson_options.txt
assets/: png2ico.sh
src/: assets.cpp  assets.h  audio_simulator.cpp  audio_simulator.h  audio_simulator_bandlimited.cpp  audio_simulator_bandlimited.h  cxx_shim.cpp  driver.cpp  driver.h  driver_msdos.cpp  driver_msdos.h  driver_null.cpp  driver_null.h  driver_sdl.cpp  driver_sdl.h  driver_sdl2.cpp  driver_sdl2.h  editor.cpp  editor.h  element_defs.inc  elements.cpp  file_selector.cpp  file_selector.h  filesystem.cpp  filesystem.h  filesystem_msdos.cpp  filesystem_msdos.h  filesystem_posix.cpp  filesystem_posix.h  filesystem_romfs.cpp  filesystem_romfs.h  game.cpp  gamevars.h  high_scores.cpp  high_scores.h  input.cpp  input.h  main.cpp  oop.cpp  platform_hacks.h  (+18 more)
src/gba/: 4x6_bin.c  4x6_bin.h  config.h  docs.md  driver_gba.cpp  driver_gba.h  ui_hacks_gba.cpp  ui_hacks_gba.h
src/n3ds/: driver_n3ds.cpp  driver_n3ds.h  gpu_n3ds.cpp  gpu_n3ds.h  shader_text.g.pica  shader_text.v.pica  sound_n3ds.cpp  sound_n3ds.h
src/psp/: config.h  driver_psp.cpp  driver_psp.h
src/utils/: iostream.cpp  iostream.h  math.cpp  math.h  mathutils.cpp  mathutils.h  quirkset.h  strings.cpp  strings.h  stringutils.cpp  stringutils.h  tokenmap.h
tools/: font2raw.py
